--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,20 +156,23 @@ header{
 
 .hero{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .hero__div{
     display: flex;
     flex-direction: column;
-    width: 75vw;
-    height: 50vh;
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
     color: #ffffff;
     background: rgba( 255, 255, 255, 0.15 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
@@ -178,13 +181,28 @@ header{
     border-radius: 10px;
 }
 
-.hero__div__h2{
+.hero__div__title{
     font-size: 3.5rem;
 }
 
-.hero__div__p{
+.hero__div__description{
     margin-top: 2.5em;
     font-size: 1.75rem;
+}
+
+.ad__title{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 3rem;
+}
+
+.ad__div{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #ffffff;
 }
 
 /* Buy */
