--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+/* All animations will take twice as long to finish */
+:root {
+    --animate-delay: 0.3s;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -95,8 +100,6 @@ header{
     transition: background .3s;
 }
 
-
-
 .header__li__a{
     padding: 5px;
     font-size: 1.5rem;
@@ -107,7 +110,7 @@ header{
 
 .header__li__a:hover{
     background: rgba( 255, 255, 255, 0.15 );
-    box-shadow: 0 8px 32px 0 rgb(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 5px 0 rgb(0, 0, 0, 0.2);
     border-radius: 5px;
 }
 
@@ -480,12 +483,9 @@ header{
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url(../images/bg.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size:cover;
     opacity: 0;
     pointer-events: none;
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 .cmodal--show{
@@ -499,11 +499,12 @@ header{
     justify-content: center;
     align-items: center;
     margin: auto;
-    width: 90%;
-    max-width: 80%;
-    max-height: 90%;
+    width: fit-content;
+    min-width: 200px;
+    height: fit-content;
+    min-height: 200px;
     padding: 3em 2.5em;
-    background: rgba( 255, 255, 255, 0.15 );
+    background: rgba( 255, 255, 255, 0.5 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
@@ -527,23 +528,24 @@ header{
 
 .cmodal__title{
     font-size: medium;
-    color: #ffffff;
+    color: #000000;
     margin-bottom: 30px;
 }
 
 .cmodal__desc{
-    font-size: 1.25rem;
-    color: #ffffff;
+    font-size: 1.5rem;
+    color: #000000;
     margin-bottom: 5px;
 }
 
 .cmodal__button{
     font-family: 'Ubuntu', sans-serif;
     font-size: 1.25rem;
+    font-weight: bold;
     padding: 5px;
-    color: #ffffff;
-    background: rgba( 255, 255, 255, 0.15 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    color: #000000;
+    background: rgba( 255, 255, 255, 0.5 );
+    box-shadow: 2px 2px 3px rgba( 31, 38, 135, 0.5 );
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
     border-radius: 5px;
@@ -553,17 +555,18 @@ header{
     margin-top: 5px;
 }
 .cmodal__button:hover{
-    background: rgba( 255, 255, 255, 0.35 );
-    box-shadow: 0 8px 32px 0 rgb(0, 0, 0, 0.2);
+    background: rgba( 255, 255, 255, 0.5 );
+    box-shadow: 2px 2px 3px rgba( 31, 38, 135, 1 );
 }
 
 .cmodal__erasebutton{
     font-family: 'Ubuntu', sans-serif;
     font-size: 1.25rem;
+    font-weight: bold;
     padding: 5px;
-    color: #ffffff;
+    color: #000000;
     background: rgba( 255, 255, 255, 0.15 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    box-shadow: 2px 2px 3px rgba( 31, 38, 135, 0.5 );
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
     border-radius: 5px;
@@ -574,5 +577,14 @@ header{
 }
 .cmodal__erasebutton:hover{
     background: rgba( 255, 255, 255, 0.35 );
-    box-shadow: 0 8px 32px 0 rgb(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 3px rgba( 31, 38, 135, 1 );
+}
+
+/* Toastify */
+
+.toastify{
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.5rem;
+    color: #ffffff;
+    background: rgba( 255, 255, 255, 0.15 );
 }
