--- a/public/sass/partials/_login.scss
+++ b/public/sass/partials/_login.scss
@@ -7,7 +7,8 @@
     bottom: 0;
     opacity: 0;
     pointer-events: none;
-    z-index: 150;
+    background: map-get($colors , background);
+    z-index: 300;
     
     &__container{
         @include flex-center;
